<package>
  <name>vi_rpe</name>
  <version>0.0.1</version>
  <description>visual inertial active marker sensor fusion</description>

  <maintainer email="lteixeira@mavt.ethz.ch">Lucas Teixeira</maintainer>

  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>minkindr_conversions</build_depend>
  <build_depend>minkindr</build_depend>
  <build_depend>gflags_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <run_depend>mav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
